--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ img {
 
 .progress-completion {
     border-radius: 4px 0 0 4px;
-    background: #f5a302;
+    background: #842bff;
     height: 0.9rem;
     width: 25%;
 }
